--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <%= flash.each do |name, mesasge| %>
+      <div class="<%= name %>"><%= message %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
